# src/dtos/fcmDto.ts
@@ -1,0 +1,7 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export default class FcmDto {
+  @IsString()
+  @IsNotEmpty()
+  fcmToken: string;
+}
